--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,10 +1205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "clean_hotel_df = pd.read_csv(\"WeatherPy_vacation.csv\")\n",
+    "\n",
     "# Review the formatting template provided\n",
     "info_box_template = \"\"\"\n",
     "<dl>\n",
@@ -1217,7 +1219,8 @@
     "<dt>Country</dt><dd>{Country}</dd>\n",
     "<dt>Current Weather</dt><dd>{Current Description} and {Max Temp} °F</dd>\n",
     "</dl>\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "# clean_hotel_df.head()"
    ]
   },
   {
@@ -1229,9 +1232,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n<dl>\\n<dt>Hotel Name</dt><dd>Hotel Syariah CN Darussalam</dd>\\n<dt>City</dt><dd>Sibolga</dd>\\n<dt>Country</dt><dd>ID</dd>\\n<dt>Current Weather</dt><dd>heavy intensity rain and 74.12 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>Hilton Garden Inn Jonesboro</dd>\\n<dt>City</dt><dd>Jonesboro</dd>\\n<dt>Country</dt><dd>US</dd>\\n<dt>Current Weather</dt><dd>clear sky and 74.89 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>CHACARA BAILLY</dd>\\n<dt>City</dt><dd>Castro</dd>\\n<dt>Country</dt><dd>BR</dd>\\n<dt>Current Weather</dt><dd>broken clouds and 71.64 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>Sheraton Kauai Coconut Beach Resort</dd>\\n<dt>City</dt><dd>Kapaa</dd>\\n<dt>Country</dt><dd>US</dd>\\n<dt>Current Weather</dt><dd>light rain and 79.12 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>Paradise Inn</dd>\\n<dt>City</dt><dd>Avarua</dd>\\n<dt>Country</dt><dd>CK</dd>\\n<dt>Current Weather</dt><dd>broken clouds and 77.05 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>Keleti Beach Resort</dd>\\n<dt>City</dt><dd>Vaini</dd>\\n<dt>Country</dt><dd>TO</dd>\\n<dt>Current Weather</dt><dd>few clouds and 73.56 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>Hotel El Recreo</dd>\\n<dt>City</dt><dd>General Roca</dd>\\n<dt>Country</dt><dd>AR</dd>\\n<dt>Current Weather</dt><dd>overcast clouds and 72.63 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>Dallas Hotel Tucuman</dd>\\n<dt>City</dt><dd>Tucuman</dd>\\n<dt>Country</dt><dd>AR</dd>\\n<dt>Current Weather</dt><dd>clear sky and 87.8 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>EPIC SANA Luanda</dd>\\n<dt>City</dt><dd>Luanda</dd>\\n<dt>Country</dt><dd>AO</dd>\\n<dt>Current Weather</dt><dd>few clouds and 73.4 °F</dd>\\n</dl>\\n',\n",
+       " '\\n<dl>\\n<dt>Hotel Name</dt><dd>InterContinental Riyadh, an IHG Hotel</dd>\\n<dt>City</dt><dd>Riyadh</dd>\\n<dt>Country</dt><dd>SA</dd>\\n<dt>Current Weather</dt><dd>clear sky and 87.94 °F</dd>\\n</dl>\\n']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the data from each row in the clean_hotel_df DataFrame, add it to the formatting template, and store the data in a list.\n",
     "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
@@ -1249,9 +1272,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.7427</td>\n",
+       "      <td>98.7792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35.8423</td>\n",
+       "      <td>-90.7043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-24.7911</td>\n",
+       "      <td>-50.0119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-39.0333</td>\n",
+       "      <td>-67.5833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-26.8241</td>\n",
+       "      <td>-65.2226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-8.8368</td>\n",
+       "      <td>13.2343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>24.6877</td>\n",
+       "      <td>46.7219</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Lat       Lng\n",
+       "0   1.7427   98.7792\n",
+       "1  35.8423  -90.7043\n",
+       "2 -24.7911  -50.0119\n",
+       "3  22.0752 -159.3190\n",
+       "4 -21.2078 -159.7750\n",
+       "5 -21.2000 -175.2000\n",
+       "6 -39.0333  -67.5833\n",
+       "7 -26.8241  -65.2226\n",
+       "8  -8.8368   13.2343\n",
+       "9  24.6877   46.7219"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the latitude and longitude from each row and store in a new DataFrame.\n",
     "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]\n",
@@ -1269,18 +1391,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2661d2ff59444a7590d91ebf9473d02f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add a marker layer for each city to the map. \n",
-    "# YOUR CODE HERE\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "\n",
     "# Create a figure to add the Google map as a layer\n",
-    "# YOUR CODE HERE\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
     "# Display the figure containing the map\n",
-    "# YOUR CODE HERE"
+    "fig"
    ]
   },
   {
