Finished part of Deliverable 3

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
+    "import os\n",
     "\n",
     "# Import API key\n",
     "from config import g_key"
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,15 +60,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Sibolga</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>74.12</td>\n",
+       "      <td>heavy intensity rain</td>\n",
+       "      <td>1.7427</td>\n",
+       "      <td>98.7792</td>\n",
+       "      <td>Hotel Syariah CN Darussalam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Jonesboro</td>\n",
+       "      <td>US</td>\n",
+       "      <td>74.89</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>35.8423</td>\n",
+       "      <td>-90.7043</td>\n",
+       "      <td>Hilton Garden Inn Jonesboro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Castro</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>71.64</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-24.7911</td>\n",
+       "      <td>-50.0119</td>\n",
+       "      <td>CHACARA BAILLY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Kapaa</td>\n",
+       "      <td>US</td>\n",
+       "      <td>79.12</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "      <td>Sheraton Kauai Coconut Beach Resort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Avarua</td>\n",
+       "      <td>CK</td>\n",
+       "      <td>77.05</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "      <td>Paradise Inn</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID       City Country  Max Temp   Current Description      Lat  \\\n",
+       "0        3    Sibolga      ID     74.12  heavy intensity rain   1.7427   \n",
+       "1        5  Jonesboro      US     74.89             clear sky  35.8423   \n",
+       "2        6     Castro      BR     71.64         broken clouds -24.7911   \n",
+       "3       10      Kapaa      US     79.12            light rain  22.0752   \n",
+       "4       12     Avarua      CK     77.05         broken clouds -21.2078   \n",
+       "\n",
+       "        Lng                           Hotel Name  \n",
+       "0   98.7792          Hotel Syariah CN Darussalam  \n",
+       "1  -90.7043          Hilton Garden Inn Jonesboro  \n",
+       "2  -50.0119                       CHACARA BAILLY  \n",
+       "3 -159.3190  Sheraton Kauai Coconut Beach Resort  \n",
+       "4 -159.7750                         Paradise Inn  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read the WeatherPy_vacation.csv into a DataFrame\n",
-    "vacation_df = # YOUR CODE HERE\n",
+    "input_file = os.path.join(\"..\", \"Vacation_Search\", \"WeatherPy_vacation.csv\")\n",
+    "vacation_df = pd.read_csv(input_file)\n",
     "\n",
     "# Display sample data\n",
-    "# YOUR CODE HERE"
+    "vacation_df.head()"
    ]
   },
   {
@@ -99,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8062215fa4d64a3c96995de821297dbc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add a marker layer for each city to the map.\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
@@ -144,17 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# The starting and ending city should be the same city.\n",
-    "vacation_start = # YOUR CODE HERE\n",
-    "vacation_end = # YOUR CODE HERE\n",
-    "vacation_stop1 = # YOUR CODE HERE\n",
-    "vacation_stop2 = # YOUR CODE HERE\n",
-    "vacation_stop3 = # YOUR CODE HERE"
+    "# Cities: Pierre, Saint Anthony, Hamilton, Jonesboro, Kirkwood\n",
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Pierre\", :]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Saint Anthony\", :]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Hamilton\", :]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Jonesboro\", :]\n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Kirkwood\", :]"
    ]
   },
   {
@@ -166,16 +296,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = # YOUR CODE HERE\n",
-    "end = # YOUR CODE HERE\n",
-    "stop1 = # YOUR CODE HERE\n",
-    "stop2 = # YOUR CODE HERE\n",
-    "stop3 = # YOUR CODE HERE"
+    "start = vacation_start.loc[:, [\"Lat\", \"Lng\"]].to_numpy()\n",
+    "end = vacation_end.loc[:, [\"Lat\", \"Lng\"]].to_numpy()\n",
+    "stop1 = vacation_stop1.loc[:, [\"Lat\", \"Lng\"]].to_numpy()\n",
+    "stop2 = vacation_stop2.loc[:, [\"Lat\", \"Lng\"]].to_numpy()\n",
+    "stop3 = vacation_stop3.loc[:, [\"Lat\", \"Lng\"]].to_numpy()\n",
+    "\n",
+    "start = start[0]\n",
+    "end = end[0]\n",
+    "stop1 = stop1[0]\n",
+    "stop2 = stop2[0]\n",
+    "stop3 = stop3[0]"
    ]
   },
   {
@@ -187,24 +323,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c269b58d5fcb4283a60dd41233089444",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Define a new figure object\n",
-    "fig = # YOUR CODE HERE\n",
+    "fig = gmaps.figure()\n",
     "\n",
     "# Create a direction layer map using the start and end latitude-longitude pairs, and stop1, stop2, and stop3 as the waypoints.\n",
     "# The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "vacation_itinerary = # YOUR CODE HERE\n",
+    "vacation_itinerary =  gmaps.directions_layer(start, end, travel_mode=\"DRIVING\")\n",
     "\n",
     "# Add the layer to the map\n",
-    "# YOUR CODE HERE\n",
+    "fig.add_layer(vacation_itinerary)\n",
     "\n",
     "# Display the map\n",
-    "# YOUR CODE HERE"
+    "fig"
    ]
   },
   {
