Finished Deliverable 3 and added brief description in README.md

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -242,7 +242,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8062215fa4d64a3c96995de821297dbc",
+       "model_id": "f6f52b853f014e5a93f306473d1e6cd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -331,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c269b58d5fcb4283a60dd41233089444",
+       "model_id": "c2e6c126e2aa4539928e5e353aab8026",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,7 +349,7 @@
     "\n",
     "# Create a direction layer map using the start and end latitude-longitude pairs, and stop1, stop2, and stop3 as the waypoints.\n",
     "# The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "vacation_itinerary =  gmaps.directions_layer(start, end, travel_mode=\"DRIVING\")\n",
+    "vacation_itinerary =  gmaps.directions_layer(start, end, waypoints=[stop1, stop2, stop3], travel_mode=\"DRIVING\")\n",
     "\n",
     "# Add the layer to the map\n",
     "fig.add_layer(vacation_itinerary)\n",
@@ -367,9 +367,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>440</td>\n",
+       "      <td>Pierre</td>\n",
+       "      <td>US</td>\n",
+       "      <td>74.05</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>44.3683</td>\n",
+       "      <td>-100.3510</td>\n",
+       "      <td>Ramkota Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>571</td>\n",
+       "      <td>Hamilton</td>\n",
+       "      <td>US</td>\n",
+       "      <td>72.19</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>39.1834</td>\n",
+       "      <td>-84.5333</td>\n",
+       "      <td>Six Acres Bed &amp; Breakfast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Jonesboro</td>\n",
+       "      <td>US</td>\n",
+       "      <td>74.89</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>35.8423</td>\n",
+       "      <td>-90.7043</td>\n",
+       "      <td>Hilton Garden Inn Jonesboro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>302</td>\n",
+       "      <td>Kirkwood</td>\n",
+       "      <td>US</td>\n",
+       "      <td>74.53</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>38.5834</td>\n",
+       "      <td>-90.4068</td>\n",
+       "      <td>Holiday Inn St Louis SW - Route 66, an IHG Hotel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID       City Country  Max Temp Current Description      Lat  \\\n",
+       "0      440     Pierre      US     74.05     overcast clouds  44.3683   \n",
+       "1      571   Hamilton      US     72.19           clear sky  39.1834   \n",
+       "2        5  Jonesboro      US     74.89           clear sky  35.8423   \n",
+       "3      302   Kirkwood      US     74.53          few clouds  38.5834   \n",
+       "\n",
+       "        Lng                                        Hotel Name  \n",
+       "0 -100.3510                                     Ramkota Hotel  \n",
+       "1  -84.5333                         Six Acres Bed & Breakfast  \n",
+       "2  -90.7043                       Hilton Garden Inn Jonesboro  \n",
+       "3  -90.4068  Holiday Inn St Louis SW - Route 66, an IHG Hotel  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
     "itinerary_df = pd.concat(\n",
@@ -395,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,29 +509,44 @@
     "\"\"\"\n",
     "\n",
     "# Get the data from each row and add it to the formatting template and store the data in a list\n",
-    "hotel_info = # YOUR CODE HERE\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in itinerary_df.iterrows()]\n",
     "\n",
     "# Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = # YOUR CODE HERE"
+    "locations = itinerary_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10c0cd4962b84dd187a0c4240b44410e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add a marker layer for each city to the map.\n",
-    "marker_layer = # YOUR CODE HERE\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "\n",
     "# Define a new figure object\n",
-    "fig = # YOUR CODE HERE\n",
+    "fig = gmaps.figure()\n",
     "\n",
     "# Add the layer to the map\n",
-    "# YOUR CODE HERE\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
     "# Display the map\n",
-    "# YOUR CODE HERE"
+    "fig"
    ]
   }
  ],
